# MCP_Host_Chatt_Interface

./: .env.example  .gitignore  PROJECT_DOCUMENTATION.md  README.md  pyproject.toml
backend/: __init__.py  config.py  logging_config.py  main.py  models.py
backend/services/: __init__.py  groq_client.py  mcp_client.py  settings_store.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.js  main.jsx  styles.css
