[project]
name = "mcp-client-codex"
version = "0.1.0"
description = "FastAPI and React chatbot client for one or more MCP servers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "groq>=0.13.0",
    "mcp>=1.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
mcp-client-api = "backend.main:run"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*"]

[tool.ruff]
line-length = 100
